--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -5,6 +5,8 @@ html {
 
 body {
   height: 100%;
+  font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB,
+    Microsoft YaHei, Arial, sans-serif;
 }
 
 #app {
