--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,14 +1,15 @@
 html {
   height: 100%;
   box-sizing: border-box;
-}
-
-body {
-  height: 100%;
-  font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB,
-    Microsoft YaHei, Arial, sans-serif;
-}
-
-#app {
-  height: 100%;
+  body {
+    height: 100%;
+    font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB,
+      Microsoft YaHei, Arial, sans-serif;
+    #app {
+      height: 100%;
+      a {
+        text-decoration: none;
+      }
+    }
+  }
 }
