--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -10,6 +10,13 @@ html {
       a {
         text-decoration: none;
       }
+      .el-menu--collapse {
+        span {
+          height: 0;
+          width: 0;
+          visibility: hidden;
+        }
+      }
     }
   }
 }
