--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -16,6 +16,9 @@ html {
           width: 0;
           visibility: hidden;
         }
+        .el-submenu__icon-arrow {
+          visibility: hidden;
+        }
       }
     }
   }
